--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="box-blanc">
 				<h1>Bienvenue sur mon profil.</h1>
-				<img src="images/photo.jpeg" alt="photo" class="center" id="photo">
+				<img src="images/photo.jpg" alt="photo" class="center" id="photo">
 				<p class="center"> 
 					Je m'appelle Nathan Latour.nnnnnnnn nnnnnnnnnn nnnnnnnnnn nnnnnnnnnnn nnnnnnnnnnnnnn nnnnnnnnnnnnnn nnnnnnnnnnnnnn nnnnnnnnnnnnn nnnnnnnnnnnn nnnnn nnnnnnnnnnn nnnnnnnnnnn nnnnnnnnn nnnnn nnnnnnnnnnnnnnnnnnnnn nnnnnnnnn nnnnnnnnnnnnn nnnnnnnnnn nnnnnnnnn nnnnnnnnnn
 				</p>
